--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "d3": "^4.11.0",
     "express": "^4.16.2",
     "helmet": "^3.9.0",
