--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.2",
     "d3": "^4.11.0",
+    "esc": "https://github.com/econ24/esc.git",
     "express": "^4.16.2",
     "helmet": "^3.9.0",
     "mapbox-gl": "^0.42.0",
