made things a bit more sane

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "AS the name suggests, an OSRM test project",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "model": "MODEL=true node app.js"
   },
   "keywords": [
     "OSRM",
